# dual_robot

./: .gitignore  README.md  README_cn.md
ackermann/ackermann_ws/src/robot_mission/: CMakeLists.txt
ackermann/ackermann_ws/src/robot_mission/include/robot_mission/: mission_executor_node.hpp  robot_health_monitor_node.hpp
ackermann/ackermann_ws/src/robot_mission/src/: mission_executor_node.cpp
ackermann/ackermann_ws/src/yolo_web/: package.xml
ackermann/ackermann_ws/src/yolo_web/config/: box_order.yaml
ackermann/ackermann_ws/src/yolo_web/launch/: yolo_system.launch.py  yolo_web.launch.py
ackermann/ackermann_ws/src/yolo_web/test/: test_detect_box.py  test_index_html.py  test_mjpeg_frame.py
ackermann/ackermann_ws/src/yolo_web/yolo_web/: detect_box.py  usb_camera_web_server.py.backup
mecanum/mecanum_ws/src/robot_interfaces/: CMakeLists.txt
mecanum/mecanum_ws/src/robot_interfaces/msg/: MissionCommand.msg  MissionStep.msg  RobotHealth.msg  RobotState.msg
mecanum/mecanum_ws/src/robot_interfaces/srv/: GetTaskPoints.srv
mecanum/mecanum_ws/src/robot_interfaces/test/: test_generated_interfaces.cpp
pc/robot_ws/: .gitignore  README.md  README_cn.md
pc/robot_ws/src/robot_bringup/: README.md  package.xml  setup.py
pc/robot_ws/src/robot_bringup/config/: cameras.yaml  g1_points.yaml  real_task_points.yaml
pc/robot_ws/src/robot_bringup/launch/: dual_robot_gazebo_nav2.launch.py  real_robot_control_plane.launch.py  robot_dispatch_gazebo.launch.py
pc/robot_ws/src/robot_bringup/maps/: lv_home.pgm  real_competition_map.pgm  real_competition_map.yaml
pc/robot_ws/src/robot_bringup/robot_bringup/: __init__.py
pc/robot_ws/src/robot_bringup/test/: test_real_map_contract.py  test_robot_dispatch_bringup_contract.py
pc/robot_ws/src/robot_dispatch/: CMakeLists.txt  package.xml
pc/robot_ws/src/robot_dispatch/config/: task_points.yaml
pc/robot_ws/src/robot_dispatch/include/robot_dispatch/: command_parser.hpp  dispatch_core.hpp  dispatch_types.hpp  marker_builder.hpp  robot_dispatch_node.hpp  task_points.hpp
pc/robot_ws/src/robot_dispatch/src/: command_parser.cpp  dispatch_core.cpp  dispatch_types.cpp  marker_builder.cpp  robot_dispatch_node.cpp  robot_dispatch_node_main.cpp  rviz_task_point_input_node.cpp  task_marker_publisher.cpp  task_points.cpp  terminal_dispatch_console.cpp
pc/robot_ws/src/robot_dispatch/test/: test_command_parser.cpp  test_dispatch_core.cpp  test_robot_dispatch_node_services.cpp  test_task_points_and_markers.cpp
pc/robot_ws/src/robot_gazebo/: README.md  package.xml  setup.py
pc/robot_ws/src/robot_gazebo/launch/: robot1_mecanum_world.launch.py
pc/robot_ws/src/robot_gazebo/maps/: gazebo_odom_map.pgm  gazebo_odom_map.yaml
pc/robot_ws/src/robot_gazebo/robot_gazebo/: __init__.py  scan_self_filter.py  sim_ackermann_base.py  sim_mecanum_base.py  static_map_publisher.py  tf_namespace_relay.py
pc/robot_ws/src/robot_gazebo/test/: test_scan_self_filter.py
pc/robot_ws/src/robot_gazebo/urdf/: robot1_mecanum_gazebo.urdf.xacro  robot1_mecanum_gazebo_lidar_only.urdf.xacro  robot2_ackermann_gazebo.urdf.xacro
pc/robot_ws/src/robot_gazebo/worlds/: pioneer_test_20x10.world  robot1_mecanum_empty.world
pc/robot_ws/src/robot_nav/: README.md  package.xml  setup.py
pc/robot_ws/src/robot_nav/launch/: display_mecanum_ackermann_nav.launch.py  map_server_launch.py  mecanum_nav2_real.launch.py  robot1_nav2_sim.launch.py  robot2_nav2_sim.launch.py
pc/robot_ws/src/robot_nav/maps/: lv_home.pgm  lv_home.yaml  real_competition_map.yaml
pc/robot_ws/src/robot_nav/params/: robot2_nav2_sim.yaml
pc/robot_ws/src/robot_nav/rviz/: dual_robot_nav2.rviz  mecanum_ackermann_nav.rviz  robot1_nav2.rviz  robot1_nav2_rdk_legacy.rviz
pc/robot_ws/src/robot_nav/rviz_rendering_overlay/: README.md
pc/robot_ws/src/robot_nav/test/: test_robot_nav_package.py
pc/robot_ws/src/robot_planner/: CMakeLists.txt  README.md  package.xml
pc/robot_ws/src/robot_planner/config/: robot1_astar.yaml  robot1_mpc_dwb.yaml
pc/robot_ws/src/robot_planner/include/robot_planner/: astar_planner.hpp  mpc_path_tracker.hpp  planner_types.hpp
pc/robot_ws/src/robot_planner/python_legacy/: README.md  setup.py
pc/robot_ws/src/robot_planner/python_legacy/config/: robot1_dwa.yaml  robot1_dwa_lite.yaml  robot1_mecanum_competition.yaml  robot1_mecanum_omni.yaml
pc/robot_ws/src/robot_planner/python_legacy/global_planner/: __init__.py  astar_global_planner.py
pc/robot_ws/src/robot_planner/src/: astar_global_planner_node.cpp  astar_planner.cpp  mpc_dwb_planner_node.cpp  mpc_path_tracker.cpp  planner_types.cpp
pc/robot_ws/src/robot_planner/test/: test_astar_planner.cpp  test_mpc_path_tracker.cpp  test_robot_planner_interfaces.py
pc/robot_ws/src/robot_tools/: package.xml  setup.py
pc/robot_ws/src/robot_tools/robot_tools/: __init__.py  check_pwa_gateway_stack.py  check_robot_namespaces.py  demo_event_keyboard.py  nav2_goal_utils.py  run_dispatch_scenarios.py  rviz_goal_to_nav2_action.py  seed_real_initial_poses.py  send_g1_nav_goals.py  send_nav_goal.py
pc/robot_ws/src/robot_tools/rviz/: dual_robot_task_monitor.rviz  real_robot_low_bandwidth.rviz  real_robot_task_monitor.rviz  robot1_sim.rviz
pc/robot_ws/src/robot_tools/scripts/: check_pwa_gateway_stack.py  check_robot_namespaces.py  record_mecanum_omni_debug_bag.sh  send_g1_nav_goals.py  send_nav_goal.py  test_mecanum_omni_goal.sh
pc/robot_ws/src/robot_tools/test/: test_demo_event_keyboard.py  test_nav_goal_tools.py  test_pwa_gateway_stack.py
pc/robot_ws/src/robot_web/: README.md  package.xml  setup.py
pc/robot_ws/src/robot_web/config/: builtin_templates.yaml
pc/robot_ws/src/robot_web/launch/: robot_web.launch.py
pc/robot_ws/src/robot_web/robot_web/: __init__.py  app.py  cameras.py  config.py  dispatch_adapter.py  exceptions.py  gateway.py  main.py  mapdata.py  models.py  points.py  ros_adapter.py  state.py  storage.py  system_control.py  validation.py
pc/robot_ws/src/robot_web/test/: test_app_routes.py  test_gateway_behavior.py  test_launch_contract.py  test_mapdata.py  test_points.py  test_ros_adapter.py  test_system_control.py
(+345 files in other folders)
